self_tests/fail014.java
class Test {
    int foo;
    boolean bar;
    static boolean bat;
    
    private void dummyMethod() {
        
    }
    
    Test baz(int foo, Test baz, boolean pass) {
        
        return null;
    }
    
    static void staticTest() {
        bat = true;
        bar = true; //error
    }
}

class Dummy {
    
}